# This file is part of MUST (Marmot Umpire Scalable Tool)
#
# Copyright (C)
#   2010-2016 ZIH, Technische Universitaet Dresden, Federal Republic of Germany
#   2010-2018 Lawrence Livermore National Laboratories, United States of America
#   2013-2018 RWTH Aachen University, Federal Republic of Germany
#
# See the LICENSE file in the package base directory for details

# @file CMakeLists.txt
#  CMake file for data-dependencie-tests
#
# @author Alexander Haase @date 06.05.2014
#

# include data_missing_host tests
ADD_SUBDIRECTORY(data_missing_host)
